image-diff-overflow: fixed image's overflow on versioned article view AI3107

--- a/public/stylesheets/application.css
+++ b/public/stylesheets/application.css
@@ -1073,6 +1073,7 @@ code input {
   border: none;
   background-repeat: no-repeat;
 }
+
 #article .article-body a.icon:hover {
   background-color: transparent;
 }
@@ -1499,6 +1500,12 @@ a.comment-picture {
   max-width: 100%;
   height: auto;
 }
+
+div.article-body.article-body-tiny-mce-article p img {
+  max-width: 100%;
+  height: auto;
+}
+
 #content .blog-post .read-more {
   text-align: right;
   clear: both;
